Updates from panama-dev thread